--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -9,6 +9,7 @@
       height: 100%;
       width: 70px;
       padding: 25px;
+      text-decoration: none;
     }
   
     .nav-links-container {
@@ -21,6 +22,7 @@
       .nav-link {
         padding: 10px 15px;
         cursor: pointer;
+        text-decoration: none;
       }
     }
   }
