--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -4,14 +4,12 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
-  
 
   .logo-container {
     height: 100%;
-    width: 100%;
+    width: 150px;
     padding: 25px;
     text-decoration: none;
-  
   }
 
   .nav-links-container {
@@ -20,7 +18,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    
 
     .nav-link {
       padding: 10px 15px;
